--- a/source/map.html
+++ b/source/map.html
@@ -1,14 +1,11 @@
 layout: false
 ---
-
 <!DOCTYPE HTML>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>My Journey</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-    <!-- 页面布局样式 -->
-    <!--<link rel="stylesheet" type="text/css" href="http://api.amap.com/Public/css/demo.Default.css"/>-->
     <script language="javascript"
             src="http://webapi.amap.com/maps?v=1.3&key=860959c90cf7e6c90bdbf4378e344729&plugin=AMap.MarkerClusterer"></script>
     <style>
@@ -30,7 +27,6 @@ layout: false
 
     </style>
 </head>
-<!--<body onLoad="mapInit()">-->
 <body>
 <div id="iCenter"></div>
 </div>
@@ -88,94 +84,125 @@ layout: false
         "39.158396,117.346777.jpg",
     ];
 
-
+    var imgsize = 60;
+    var imgageScale = "?imageView2/2/w/" + imgsize + "/h/" + imgsize;
     var mapObj = null;
     var cluster, markers = [];
     mapObj = new AMap.Map("iCenter", {center: new AMap.LngLat(105.505859, 30.371244), resizeEnable: true, zoom: 5});
-    //    mapObj = new AMap.Map("iCenter", {center: new AMap.LngLat(105.505859, 30.371244), resizeEnable: true, zoom: 5});
+
+    mapObj.setMapStyle('amap://styles/' + "whitesmoke");
+
     if (os.isAndroid || os.isPhone) {
         mapObj.setCenter(new AMap.LngLat(117.316933, 31.88513));
     }
 
-//    mapObj.plugin(["AMap.ToolBar"], function () { var tool = new AMap.ToolBar({position:"LT"}); tool.show();mapObj.addControl(tool); });
-
-        mapObj.clearMap();
-        var mapBounds = mapObj.getBounds();
-        var sw = mapBounds.getSouthWest();
-        var ne = mapBounds.getNorthEast();
-        var lngSpan = Math.abs(sw.lng - ne.lng);
-        var latSpan = Math.abs(ne.lat - sw.lat);
+    mapObj.clearMap();
+    var mapBounds = mapObj.getBounds();
+    var sw = mapBounds.getSouthWest();
+    var ne = mapBounds.getNorthEast();
+    var lngSpan = Math.abs(sw.lng - ne.lng);
+    var latSpan = Math.abs(ne.lat - sw.lat);
 
 
-        for (var i = 0; i < imgs.length; i++) {
-//        var markerPosition = new AMap.LngLat(result.markers[i].lng, result.markers[i].lat);
-//        if (result.markers[i].url.length < 60) {
-//            var marker = new AMap.Marker({
-//                map: mapObj,
-//                position: markerPosition, //基点位置
-////            icon: "js_marker.png", //marker图标，直接传递地址url
-//                content: '<img src="http://localhost:63342/OA-instagram_maps/img/map/_1.jpg" />',
-////            offset: {x: -8, y: -34} //相对于基点的位置
-//            });
-//        }
-//        else {
-//            var marker = new AMap.Marker({
-//                map: mapObj,
-//                position: markerPosition, //基点位置
-//                content: '<img src="' + result.markers[i].url +'?imageView2/2/w/100/h/100' +'" />',
-//            });
-//        }
-            var img = imgs[i];
-            var latlng = img.slice(0, -4).split(",");
-            var markerPosition = new AMap.LngLat(latlng[1], latlng[0]);
-            var marker = new AMap.Marker({
-                map: mapObj,
-                position: markerPosition, //基点位置
-                content: '<img src="' + 'http://oujyr3c1x.bkt.clouddn.com/map-' + img + '?imageView2/2/w/100/h/100' + '" />',
-                url:'http://oujyr3c1x.bkt.clouddn.com/map-' + img + '?imageView2/2/w/100/h/100'
+    for (var i = 0; i < imgs.length; i++) {
+
+        var img = imgs[i];
+        var latlng = img.slice(0, -4).split(",");
+        var markerPosition = new AMap.LngLat(latlng[1], latlng[0]);
+        var marker = new AMap.Marker({
+            map: mapObj,
+            position: markerPosition, //基点位置
+            content: '<img style="border: 2px solid #fff";boxShadow: 3px 3px 10px #888";" src="' + 'http://oujyr3c1x.bkt.clouddn.com/map-' + img + imgageScale + '" />',
+            url: 'http://oujyr3c1x.bkt.clouddn.com/map-' + img + '?imageView2/2/w/100/h/100'
+        });
+
+        markers.push(marker);
+    }
+
+
+    var count = markers.length;
+    var _renderCluserMarker = function (context) {
+        console.log(context.markers[0].Qi.url);
+        var factor = Math.pow(context.count / count, 1 / 18)
+        var div = document.createElement('div');
+        var Hue = 180 - factor * 180;
+        var bgColor = 'hsla(' + Hue + ',100%,50%,0.7)';
+        var fontColor = 'hsla(' + Hue + ',100%,20%,1)';
+        var borderColor = 'hsla(' + Hue + ',100%,40%,1)';
+        var shadowColor = 'hsla(' + Hue + ',100%,50%,1)';
+        var size = imgsize;
+        div.style.width = div.style.height = size + 'px';
+        div.style.backgroundImage = "url(" + context.markers[0].Qi.url + ")";
+
+        div.style.lineHeight = size + 'px';
+        div.style.color = 'rgb(255, 255, 255)';
+        div.style.fontSize = '20px';
+        div.style.textAlign = 'center';
+        div.style.border = "2px solid #fff";
+        div.style.boxShadow = "3px 3px 10px #888";
+        var b = document.createElement('b');
+
+        var cornerMarkSize = 12;
+        b.style.position = "absolute";
+        b.style.color = "#fff";
+        b.style.backgroundColor = "#117ffd";
+        b.style.borderRadius = "8px";
+        b.style.height = cornerMarkSize + "px";
+        b.style.minWidth = cornerMarkSize + "px";
+        b.style.lineHeight = "12px";
+        b.style.top = "-7px";
+        b.style.left = (imgsize - cornerMarkSize / 2) + "px";
+        b.style.textAlign = "center";
+        b.style.padding = "4px";
+        b.style.fontSize = "14px";
+        b.style.boxShadow = "0 3px 14px rgba(0,0,0,0.4)"
+        b.innerHTML = context.count;
+        div.appendChild(b);
+        context.marker.setOffset(new AMap.Pixel(-size / 2, -size / 2));
+        context.marker.setContent(div)
+    };
+    addCluster(2);
+
+    function addCluster(tag) {
+        if (cluster) {
+            cluster.setMap(null);
+        }
+        if (tag == 1) {
+            var sts = [
+                {
+                    url: "map-images/1.png",
+                    size: new AMap.Size(74, 75),
+                    offset: new AMap.Pixel(-16, -30),
+                    textColor: '#ffffff',
+                    textSize: 20
+                },
+                {
+                    url: "map-images/2.png",
+                    size: new AMap.Size(74, 75),
+                    offset: new AMap.Pixel(-16, -30),
+                    textColor: '#ffffff',
+                    textSize: 20
+                },
+                {
+                    url: "../img/map/set/3.png",
+                    size: new AMap.Size(74, 75),
+                    offset: new AMap.Pixel(-24, -45),
+                    textColor: '#ffffff',
+                    textSize: 20
+                }];
+            mapObj.plugin(["AMap.MarkerClusterer"], function () {
+                cluster = new AMap.MarkerClusterer(mapObj, markers, {minClusterSize: 2, gridSize: 50, styles: sts});
+            });
+        }
+        else {
+            console.log("xxxx");
+            var cluster = new AMap.MarkerClusterer(mapObj, markers, {
+                gridSize: 60,
+                renderCluserMarker: _renderCluserMarker
             });
 
-            markers.push(marker);
         }
-        addCluster(1);
-        function addCluster(tag) {
-            if (cluster) {
-                cluster.setMap(null);
-            }
-            if (tag == 1) {
-                var sts = [
-                    {
-                        url: "map-images/1.png",
-//                        url:markers[0].  'http://oujyr3c1x.bkt.clouddn.com/map-' + img + '?imageView2/2/w/100/h/100'
-                        size: new AMap.Size(74, 75),
-                        offset: new AMap.Pixel(-16, -30),
-                        textColor: '#ffffff',
-                        textSize: 20
-                    },
-                    {
-                        url: "map-images/2.png",
-                        size: new AMap.Size(74, 75),
-                        offset: new AMap.Pixel(-16, -30),
-                        textColor: '#ffffff',
-                        textSize: 20
-                    },
-                    {
-                        url: "../img/map/set/3.png",
-                        size: new AMap.Size(74, 75),
-                        offset: new AMap.Pixel(-24, -45),
-                        textColor: '#ffffff',
-                        textSize: 20
-                    }];
-                mapObj.plugin(["AMap.MarkerClusterer"], function () {
-                    cluster = new AMap.MarkerClusterer(mapObj, markers, {minClusterSize: 2, gridSize: 60, styles: sts});
-                });
-            }
-            else {
-                mapObj.plugin(["AMap.MarkerClusterer"], function () {
-                    cluster = new AMap.MarkerClusterer(mapObj, markers);
-                });
-            }
-        }
+    }
 
 </script>
 
