--- a/source/map.html
+++ b/source/map.html
@@ -6,6 +6,7 @@ layout: false
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>My Journey</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script language="javascript"
             src="http://webapi.amap.com/maps?v=1.3&key=860959c90cf7e6c90bdbf4378e344729&plugin=AMap.MarkerClusterer"></script>
     <style>
@@ -25,10 +26,176 @@ layout: false
             padding: 20px;
         }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        .leaflet-popup-instagram a.leaflet-popup-close-button {
+            /*top: 0px;*/
+            /*right: -13px;*/
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 12px;
+            width: 15px;
+            height: 15px;
+            box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
+            color: #555;
+        }
+
+        .leaflet-popup-content-wrapper,
+        .leaflet-popup-tip {
+            background: white;
+
+            box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
+        }
+
+        .leaflet-popup-content-wrapper {
+            text-align: left;
+
+        }
+
+        .leaflet-popup-instagram .leaflet-popup-content-wrapper {
+            padding: 0 0 1px 0;
+            border-radius: 6px;
+        }
+
+        .leaflet-popup-instagram .leaflet-popup-content {
+            margin: 13px 0;
+        }
+
+        .leaflet-popup-instagram img,
+        .leaflet-popup-instagram video {
+            width: 301px;
+            height: 301px;
+            border-radius: 4px 4px 0 0;
+        }
+
+        .leaflet-popup-instagram p {
+            margin: 5px 10px 0 10px;
+        }
+
+        .leaflet-popup-tip-container {
+            margin: 0 auto;
+            width: 40px;
+            height: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .leaflet-oldie .leaflet-popup-tip-container {
+            margin-top: -1px;
+        }
+
+        /* popup */
+
+        .leaflet-popup {
+            /*position: absolute;*/
+            text-align: center;
+        }
+
+        .leaflet-popup-content {
+            margin: 13px 19px;
+            line-height: 1.4;
+        }
+
+        .leaflet-popup-content p {
+            margin: 18px 0;
+        }
+
+        .leaflet-popup-tip {
+            width: 17px;
+            height: 17px;
+            padding: 1px;
+
+            margin: -10px auto 0;
+
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
+
+        .leaflet-container a.leaflet-popup-close-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 4px 4px 0 0;
+            text-align: center;
+            width: 18px;
+            height: 14px;
+            color: #c3c3c3;
+            text-decoration: none;
+            font-weight: bold;
+            background: transparent;
+        }
+
+        .leaflet-container a.leaflet-popup-close-button:hover {
+            color: #999;
+        }
+
+        .leaflet-popup-instagram a.leaflet-popup-close-button:hover {
+            color: #333;
+            background-color: #eee;
+        }
+
+        #popup-pane {
+            position: absolute;
+            left: 100px;
+            top: 100px;
+        }
+
+
+
+
+
+
+
+
+
     </style>
 </head>
 <body>
 <div id="iCenter"></div>
+
+
+<!--<div id="popup-pane">-->
+    <!--<div class="leaflet-popup leaflet-popup-instagram leaflet-zoom-animated"-->
+         <!--style="opacity: 1; transform: translate3d(3px, 343px, 0px);">-->
+        <!--<a class="leaflet-popup-close-button" href="#close">×</a>-->
+        <!--<div class="leaflet-popup-content-wrapper">-->
+            <!--<div class="leaflet-popup-content" style="width: 301px;">-->
+                <!--<a href="http://instagram.com/p/pQ1uamSkhC/" title="View on Instagram">-->
+                    <!--<img src="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10472008_268778276643825_1917661086_n.jpg">-->
+                <!--</a>-->
+                <!--<p>#lam #nam</p>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="leaflet-popup-tip-container">-->
+            <!--<div class="leaflet-popup-tip"></div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+<!--</div>-->
+
+
+
+
 </div>
 </body>
 
@@ -97,13 +264,14 @@ layout: false
     }
 
     mapObj.clearMap();
+
     var mapBounds = mapObj.getBounds();
     var sw = mapBounds.getSouthWest();
     var ne = mapBounds.getNorthEast();
     var lngSpan = Math.abs(sw.lng - ne.lng);
     var latSpan = Math.abs(ne.lat - sw.lat);
 
-
+    mapObj.on('zoomstart', mapObj.clearInfoWindow);
     for (var i = 0; i < imgs.length; i++) {
 
         var img = imgs[i];
@@ -113,23 +281,48 @@ layout: false
             map: mapObj,
             position: markerPosition, //基点位置
             content: '<img style="border: 2px solid #fff";boxShadow: 3px 3px 10px #888";" src="' + 'http://oujyr3c1x.bkt.clouddn.com/map-' + img + imgageScale + '" />',
-            url: 'http://oujyr3c1x.bkt.clouddn.com/map-' + img + '?imageView2/2/w/100/h/100'
+            url: 'http://oujyr3c1x.bkt.clouddn.com/map-' + img + '?imageView2/2/w/100/h/100',
+            origin_url: 'http://oujyr3c1x.bkt.clouddn.com/map-' + img,
         });
+
+        marker.on('click', markerClick);
 
         markers.push(marker);
     }
 
+    function markerClick(e) {
+
+        var infoWindow = new AMap.InfoWindow({
+            isCustom: true,
+            content:'\
+            <div class="leaflet-popup leaflet-popup-instagram leaflet-zoom-animated" style="opacity: 1;">\
+                <a class="leaflet-popup-close-button" onclick="mapObj.clearInfoWindow()" href="#close" style="text-decoration:none">×</a>\
+        <div class="leaflet-popup-content-wrapper">\
+            <div class="leaflet-popup-content" onclick="mapObj.clearInfoWindow()" style="width: 301px;">\
+                '+
+                    '<img src=' + e.target.Qi.origin_url+ '>\
+                \
+                <p>&nbsp;</p>\
+            </div>\
+        </div>\
+        <div class="leaflet-popup-tip-container">\
+                <div class="leaflet-popup-tip"></div>\
+                </div>\
+                </div>\
+                ',
+//            size: new AMap.Size(100, 0),
+            offset:new AMap.Pixel(20, -30),
+            position: e.target.getPosition(),
+        });
+//        infoWindow.open(mapObj, mapObj.getCenter());
+        infoWindow.open(mapObj, e.target.getPosition());
+    }
 
     var count = markers.length;
     var _renderCluserMarker = function (context) {
         console.log(context.markers[0].Qi.url);
         var factor = Math.pow(context.count / count, 1 / 18)
         var div = document.createElement('div');
-        var Hue = 180 - factor * 180;
-        var bgColor = 'hsla(' + Hue + ',100%,50%,0.7)';
-        var fontColor = 'hsla(' + Hue + ',100%,20%,1)';
-        var borderColor = 'hsla(' + Hue + ',100%,40%,1)';
-        var shadowColor = 'hsla(' + Hue + ',100%,50%,1)';
         var size = imgsize;
         div.style.width = div.style.height = size + 'px';
         div.style.backgroundImage = "url(" + context.markers[0].Qi.url + ")";
