--- a/source/map.html
+++ b/source/map.html
@@ -8,7 +8,7 @@ layout: false
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script language="javascript"
-            src="http://webapi.amap.com/maps?v=1.3&key=860959c90cf7e6c90bdbf4378e344729&plugin=AMap.MarkerClusterer"></script>
+            src="http://webapi.amap.com/maps?v=1.3&key=860959c90cf7e6c90bdbf4378e344729&plugin=AMap.MarkerClusterer,AMap.ToolBa"></script>
     <style>
         html {
             width: 100%;
@@ -22,8 +22,8 @@ layout: false
 
         #iCenter {
             width: 100%;
-            height: calc(100% - 20px);
-            padding: 20px;
+            height: calc(100% - 30px);
+            /*padding: 20px;*/
         }
 
 
@@ -256,6 +256,20 @@ layout: false
     var mapObj = null;
     var cluster, markers = [];
     mapObj = new AMap.Map("iCenter", {center: new AMap.LngLat(105.505859, 30.371244), resizeEnable: true, zoom: 5});
+
+    mapObj.plugin(["AMap.ToolBar"],function(){  var tool = new AMap.ToolBar(); mapObj.addControl(tool); });
+//    var
+//            toolBar = new AMap.ToolBar({
+//                visible: true
+//            }),
+//            overView = new AMap.OverView({
+//                visible: false
+//            }),
+//            map = new AMap.Map("container", {
+//                resizeEnable: true
+//            });
+//
+//    toolBar.show();
 
     mapObj.setMapStyle('amap://styles/' + "whitesmoke");
 
