--- a/source/map.html
+++ b/source/map.html
@@ -23,27 +23,7 @@ layout: false
         #iCenter {
             width: 100%;
             height: calc(100% - 30px);
-            /*padding: 20px;*/
         }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         .leaflet-popup-instagram a.leaflet-popup-close-button {
             /*top: 0px;*/
@@ -161,13 +141,6 @@ layout: false
         }
 
 
-
-
-
-
-
-
-
     </style>
 </head>
 <body>
@@ -175,25 +148,23 @@ layout: false
 
 
 <!--<div id="popup-pane">-->
-    <!--<div class="leaflet-popup leaflet-popup-instagram leaflet-zoom-animated"-->
-         <!--style="opacity: 1; transform: translate3d(3px, 343px, 0px);">-->
-        <!--<a class="leaflet-popup-close-button" href="#close">×</a>-->
-        <!--<div class="leaflet-popup-content-wrapper">-->
-            <!--<div class="leaflet-popup-content" style="width: 301px;">-->
-                <!--<a href="http://instagram.com/p/pQ1uamSkhC/" title="View on Instagram">-->
-                    <!--<img src="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10472008_268778276643825_1917661086_n.jpg">-->
-                <!--</a>-->
-                <!--<p>#lam #nam</p>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="leaflet-popup-tip-container">-->
-            <!--<div class="leaflet-popup-tip"></div>-->
-        <!--</div>-->
-    <!--</div>-->
-
+<!--<div class="leaflet-popup leaflet-popup-instagram leaflet-zoom-animated"-->
+<!--style="opacity: 1; transform: translate3d(3px, 343px, 0px);">-->
+<!--<a class="leaflet-popup-close-button" href="#close">×</a>-->
+<!--<div class="leaflet-popup-content-wrapper">-->
+<!--<div class="leaflet-popup-content" style="width: 301px;">-->
+<!--<a href="http://instagram.com/p/pQ1uamSkhC/" title="View on Instagram">-->
+<!--<img src="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10472008_268778276643825_1917661086_n.jpg">-->
+<!--</a>-->
+<!--<p>#lam #nam</p>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="leaflet-popup-tip-container">-->
+<!--<div class="leaflet-popup-tip"></div>-->
+<!--</div>-->
 <!--</div>-->
 
-
+<!--</div>-->
 
 
 </div>
@@ -257,19 +228,10 @@ layout: false
     var cluster, markers = [];
     mapObj = new AMap.Map("iCenter", {center: new AMap.LngLat(105.505859, 30.371244), resizeEnable: true, zoom: 5});
 
-    mapObj.plugin(["AMap.ToolBar"],function(){  var tool = new AMap.ToolBar(); mapObj.addControl(tool); });
-//    var
-//            toolBar = new AMap.ToolBar({
-//                visible: true
-//            }),
-//            overView = new AMap.OverView({
-//                visible: false
-//            }),
-//            map = new AMap.Map("container", {
-//                resizeEnable: true
-//            });
-//
-//    toolBar.show();
+    mapObj.plugin(["AMap.ToolBar"], function () {
+        var tool = new AMap.ToolBar();
+        mapObj.addControl(tool);
+    });
 
     mapObj.setMapStyle('amap://styles/' + "whitesmoke");
 
@@ -308,13 +270,13 @@ layout: false
 
         var infoWindow = new AMap.InfoWindow({
             isCustom: true,
-            content:'\
+            content: '\
             <div class="leaflet-popup leaflet-popup-instagram leaflet-zoom-animated" style="opacity: 1;">\
                 <a class="leaflet-popup-close-button" onclick="mapObj.clearInfoWindow()" href="#close" style="text-decoration:none">×</a>\
         <div class="leaflet-popup-content-wrapper">\
             <div class="leaflet-popup-content" onclick="mapObj.clearInfoWindow()" style="width: 301px;height: 301px">\
-                '+
-                    '<img src=' + e.target.Qi.origin_url+ '>\
+                ' +
+            '<img src=' + e.target.Qi.origin_url + '>\
                 \
                 <p>&nbsp;</p>\
             </div>\
@@ -325,7 +287,7 @@ layout: false
                 </div>\
                 ',
 //            size: new AMap.Size(100, 0),
-            offset:new AMap.Pixel(20, -30),
+            offset: new AMap.Pixel(20, -30),
             position: e.target.getPosition(),
         });
 //        infoWindow.open(mapObj, mapObj.getCenter());
@@ -402,7 +364,6 @@ layout: false
             });
         }
         else {
-            console.log("xxxx");
             var cluster = new AMap.MarkerClusterer(mapObj, markers, {
                 gridSize: 60,
                 renderCluserMarker: _renderCluserMarker
