--- a/source/map.html
+++ b/source/map.html
@@ -4,7 +4,7 @@ layout: false
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>My Journey</title>
+    <title>My Tracks</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script language="javascript"
